# data-tools

./: .gitignore  .ruff.toml  2.0.0  404.html  CODE_OF_CONDUCT.md  COMPLETE_VERIFICATION_REPORT.md  CONTRIBUTING.md  Dockerfile  FINAL_VALIDATION_SUMMARY.md  FINAL_VERIFICATION_NO_FAILURES.md  README.md  README.rst  VALIDATION_REPORT.md  WOKSHOP_CONTRIBUTOR.txt  WORKSHOP_CONTRIBUTORS.txt  check_license.py  conceptual_search_quickstart.ipynb  create_dp_prompt.md  final_verification.py  index.html  main.ipynb  profiles.yml  pyproject.toml  quickstart.ipynb  quickstart_healthcare.ipynb  quickstart_tech_manufacturing.ipynb  quickstart_technology_manufacturing.ipynb  semantic_search.md  server.json  sitemap.xml  system_prompt.md  test.py  test_auto_load.py  test_col_search.py  test_table_search.py  verify_adapter.py  verify_quality.py
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  good_first_issue.md  help_wanted.md
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yaml  vale-linter.yaml
2025-11-20_23-34-07/intugle/: config.yaml
2025-11-20_23-42-06/intugle/: config.yaml
2025-11-20_23-43-58/intugle/: config.yaml
2025-11-20_23-45-29/intugle/: config.yaml
2025-11-20_23-52-01/intugle/: config.yaml
2025-11-20_23-53-28/intugle/: config.yaml
2025-11-22_21-23-19/intugle/: config.yaml
2025-11-22_21-26-07/intugle/: config.yaml
2025-11-22_21-28-34/intugle/: config.yaml
2025-12-13_22-55-16/intugle/: config.yaml
2025-12-13_22-55-26/intugle/: config.yaml
assets/css/: styles.361f2bb2.css  styles.e57c2a4e.css
assets/js/: 0e384e19.8ee5ccb9.js  0f3a233f.c0f81769.js  14eb3368.ff147a99.js  17896441.4ba63d5d.js  17896441.8feba387.js  1df93b7f.a9722ba8.js  1f391b9e.2f57ec9e.js  393be207.1b094ce1.js  3d4610b0.0dffb209.js  43cd4838.5c8b2955.js  668.4a893fd1.js  6ad85ac9.2b02cb29.js  6ad85ac9.478c3525.js  6e438c5b.82626183.js  77fe8275.b0932ccc.js  93e436d6.0eff678a.js  a94703ab.a44129f7.js  d589d3a7.49d8da08.js  d589d3a7.4c19c4fa.js  main.10f7db32.js  main.bf30f1c1.js  runtime~main.8e10219a.js  runtime~main.cb36c4f8.js
docs/: CDM_BUSINESS_ONTOLOGY.md
docs/core-concepts/: index.html
docs/getting-started/: index.html
docs/intro/: index.html
docscontent/: quickstart_content.txt
docsite/: docusaurus.config.ts  package-lock.json  package.json
docsite/docs/: core-concepts.md  examples.md  getting-started.md  intro.md  mcp-server.md  streamlit-app.md  vibe-coding.md
docsite/static/: llms.txt  robots.txt
evals_ground_truth/relationships/: b2b_tech_company.csv  ecommerce_eval.csv  heathcare_eval.csv  work_cycles_eval.csv
examples/: business_ontology_cdm.json  cdm_business_ontology_example.py  financial_services_cdm_example.py  financial_services_mappings_cdm.json  financial_services_ontology_cdm.json  healthcare_cdm_example.py  healthcare_ontology_cdm.json  healthcare_semantic_to_cdm_mappings.json  quick_start_cdm.py  redshift_adapter_example.py  semantic_to_cdm_mappings.json
examples/intugle/: config.yaml
markdown-page/: index.html
notebooks/: quickstart.ipynb  quickstart_basketball_composite_links.ipynb  quickstart_cleaned.ipynb  quickstart_conceptual_search.ipynb  quickstart_content.txt  quickstart_duckdb.ipynb  quickstart_fmcg.ipynb  quickstart_fmcg_snowflake.ipynb  quickstart_healthcare.ipynb  quickstart_healthcare_databricks.ipynb  quickstart_native_databricks.ipynb  quickstart_native_snowflake.ipynb  quickstart_sports_media.ipynb  quickstart_streamlit.ipynb  quickstart_tech_company.ipynb  quickstart_tech_manufacturing.ipynb  sql_generator.ipynb  upstream.ipynb
sample_data/fmcg/: ad_spends.csv  comp_price.csv  cons_fb.csv  disti.csv  mkt_coverage.csv  prd_mstr.csv  pric_strat.csv  price_sense.csv  promo_camp.csv  retail_audit.csv  rnd.csv  sales.csv  social.csv
sample_data/healthcare/: allergies.csv  careplans.csv  claims.csv  claims_transactions.csv  conditions.csv  devices.csv  encounters.csv  imaging_studies.csv  immunizations.csv  medications.csv  observations.csv  organizations.csv  patients.csv  payer_transitions.csv  payers.csv  procedures.csv  providers.csv  supplies.csv
sample_data/professional_basketball/: awards_coaches.csv  coaches.csv  draft.csv  players.csv  players_teams.csv  series_post.csv  teams.csv
sample_data/sports_media/: ads.csv  availability_region.csv  bio.csv  broadcasters.csv  campaigns.csv  campaigns_audience.csv  career_stats.csv  cdns.csv  colors.csv  contract_details.csv  devices.csv  engagement.csv  info.csv  injury_details.csv  interactions.csv  license_info.csv  locations.csv  match_sponsor.csv  matches.csv  metadata.csv  payment_hist.csv  perf_metrics.csv  players_social_media_handles.csv  preferred_players.csv  preferred_sports.csv  preferred_teams.csv  scores.csv  sponosred_campaign.csv  sponsor_contact.csv  sponsor_details.csv  subs_pmt.csv  subscriptions.csv  target_audience.csv  team_bio.csv  team_social.csv  team_sponsor.csv  teams_playing.csv  viewer_details.csv  viewerships.csv  weather.csv
sample_data/tech_company/: campaign_survey.csv  campaigns.csv  customer_hierarchy.csv  customers.csv  delivery_survey.csv  expense.csv  install_base.csv  inventory.csv  logistics.csv  nps_survey.csv  opportunity.csv  orders.csv  prob_statement_issue.csv  product_feature.csv  product_hierarchy.csv  products.csv  renewals.csv  returns.csv  service_requests.csv  website.csv
src/data_tools/: __init__.py  sql_generator.py
src/intugle/: __init__.py  cli.py  data_product.py  knowledge_builder.py  semantic_model.py  semantic_search.py  sql_generator.py  streamlit.py
streamlit_app/: README.md  helper.py  main.py  requirements.txt
test_data/: orders.csv
tests/: __init__.py  conftest.py
tests/adapters/: base_adapter_tests.py  test_bigquery_adapter.py  test_databricks_adapter.py  test_duckdb_adapter.py  test_factory.py  test_mariadb_adapter.py  test_mysql_adapter.py  test_oracle_adapter.py  test_redshift_adapter.py  test_snowflake_adapter.py  test_sql_identifier_safety.py  test_sqlite_adapter.py  test_utils.py
tests/analysis/: test_high_level.py  (+6 more)
(+255 files in other folders)
