[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-tools"
version = "0.1.0"
description = "A library for data processing tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.4",
    "networkx>=3.4.2",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
test = [
    "langchain-core>=0.3.74",
    "langchain-mcp-adapters>=0.1.9",
    "pytest",
    "pytest-asyncio>=1.1.0",
]
lint = ["ruff"]

[tool.ruff]
src = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
