[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-tools"
version = "0.1.0"
description = "A library for data processing tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.4",
    "nltk>=3.9.1",
    "numpy==1.26.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.4",
    "networkx>=3.4.2",
    "pandas>=2.3.1",
    "pyaml>=25.7.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyfunctional>=1.5.0",
    "scikit-learn==1.2.2",
    "symspellpy>=6.9.0",
    "trieregex>=1.0.0",
    "xgboost==1.7.5",
    "pyyaml>=6.0.2",
]

[dependency-groups]
test = [
    "langchain-core>=0.3.74",
    "langchain-mcp-adapters>=0.1.9",
    "pytest",
    "pytest-asyncio>=1.1.0",
]
lint = ["ruff"]

[tool.ruff]
src = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
