[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intugle"
version = "1.3.0"
authors = [
    { name="Intugle", email="hello@intugle.ai" },
]
description = "A GenAI-powered Python library for building semantic layers."
readme = "README.md"
keywords = ["data", "semantic layer", "genai", "llm", "data profiling", "link prediction", "sql generation"]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "langchain-community>=0.4.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.1.3,<2.0.0",
    "langgraph-checkpoint>=4.0.0",
    "nltk>=3.9.4",
    "numpy<=2.3.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "matplotlib>=3.10.5",
    "mcp[cli]>=1.12.4",
    "networkx>=3.4.2",
    "pandas>=2.2.2",
    "pyaml>=25.7.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyfunctional>=1.5.0",
    "python-dotenv>=1.1.1",
    "symspellpy>=6.9.0",
    "trieregex>=1.0.0",
    "xgboost>=3.0.4",
    "pyyaml>=6.0.2",
    "duckdb>=1.3.2",
    "scikit-learn==1.7.1",
    "langchain[anthropic,google-genai,openai]>=1.2.10,<2.0.0",
    "qdrant-client>=1.15.1",
    "rich>=14.1.0",
    "aiohttp>=3.13.3",
    "aiofiles>=23.2.1",
    "tavily-python>=0.1.11",
    "pillow>=12.1.1",
    "cryptography>=46.0.6",
    "filelock>=3.25.0",
    "PyJWT>=2.12.1",
    "orjson>=3.11.7",
    "tornado>=6.5.3",
    "protobuf>=6.33.0",
    "pyasn1>=0.6.3",
    "marshmallow>=3.26.2",
    "pygments>=2.20.0",
    "pyopenssl>=26.0.0",
    "langsmith>=0.4.50",
    "fonttools>=4.62.1",
    "requests>=2.33.0",
]

[project.optional-dependencies]
snowflake = [
    "snowflake-snowpark-python[pandas]>=1.12.0",
    "sqlglot>=27.20.0",
]
databricks = [
    "databricks-sql-connector>=4.1.3",
    "pyspark>=3.5.0,<4.0.0",
    "sqlglot>=27.20.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "sqlglot>=27.20.0",
]
bigquery = [
    "google-cloud-bigquery>=3.11.0",
    "sqlglot>=27.20.0",
]
sqlserver = [
    "mssql-python>=0.13.1",
    "sqlglot>=27.20.0",
]

mysql = [
    "PyMySQL>=1.1.0",
    "sqlglot>=27.20.0",
]

mariadb = [
    "mariadb>=1.1.10",
    "sqlglot>=27.20.0",
]

oracle = [
    "oracledb>=2.0.0",
    "sqlglot>=27.20.0",
]

streamlit = [
    "streamlit>=1.51.0",
    "pyngrok==7.4.0",
    "python-dotenv==1.1.1",
    "xlsxwriter==3.2.9",
    "plotly",
    "graphviz"
]


[project.urls]
"Homepage" = "https://github.com/Intugle/data-tools"
"Bug Tracker" = "https://github.com/Intugle/data-tools/issues"

[project.scripts]
intugle-mcp = "intugle.mcp.server:main"
intugle-streamlit = "intugle.cli:run_streamlit_app"

[dependency-groups]
test = [
    "langchain-core>=1.2.11",
    "langchain-mcp-adapters>=0.1.9",
    "pytest",
    "pytest-asyncio>=1.1.0",
    "pytest-mock",
    "sqlglot>=27.20.0",
]
lint = ["ruff"]
dev = [
    "asyncpg>=0.30.0",
    "databricks-sql-connector>=4.1.3",
    "ipykernel>=6.30.1",
    "langfuse==2.60.4",
    "mssql-python>=0.13.1",
    "pysonar>=1.2.0.2419",
    "pyspark>=3.5.0,<4.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
    "snowflake-snowpark-python[pandas]>=1.39.1",
    "sqlglot>=27.20.0",
    "twine>=6.1.0",
]

[tool.uv]
override-dependencies = [
    # pysonar (dev-only) pins requests==2.32.5 which conflicts; override to fix CVE
    "requests>=2.33.0",
]

[tool.ruff]
src = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"intugle" = ["**/*.yaml", "**/*.txt", "**/*.pkl", "mcp/semantic_layer/prompts/*.md", "streamlit_app/**/*"]

[tool.pytest.ini_options]
markers = [
    "mcp: marks tests that require the MCP server to be running",
]
filterwarnings = [
    "ignore:Field name \"schema\" in \"SchemaBase\" shadows an attribute in parent \"BaseModel\":UserWarning",
]

[tool.sonar]
projectKey = "Intugle-Data-Tools"
projectName = "Intugle Data Tools"
sources = "src"
python.version = "3.10"
python.coverage.reportPaths = "coverage.xml"
